--- a/src/server/views/notFound.ejs
+++ b/src/server/views/notFound.ejs
@@ -37,7 +37,7 @@
 
             <!-- Main jumbotron for a primary marketing message or call to action -->
             <div class="container row">
-            	<h2>您所输入的生日日期超出范围，或不存在于记录当中。请重新输入。</h2>
+            	<h2 style="margin: 40px;">您所输入的生日日期超出范围，或不存在于记录当中。<br>请重新输入。</h2>
             </div>
 
             <script src="js/vendor/jquery-1.11.2.min.js"></script>
