--- a/src/server/public/css/main.css
+++ b/src/server/public/css/main.css
@@ -5,7 +5,12 @@
    ========================================================================== */
 
 
-
+html, body {
+  overflow-x: hidden;
+}
+body {
+  position: relative
+}
 
 
 
