--- a/src/server/views/ZiWeiPan.ejs
+++ b/src/server/views/ZiWeiPan.ejs
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title></title>
+  <title>缘中秀在线排盘系统</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -600,7 +600,7 @@ yearpan
 			</div>
             <div class='container'>
             <div class='explanation-div list-group' style='margin-top: 30px; margin-left: 10px;width: 615px;'>
-                <h3 class="list-group-item list-group-item-info">宫中各星注释</h3>
+                <h3 class="list-group-item list-group-item-info">命盘解析</h3>
                 
             </div>
             <div style='display: none'>
