--- a/src/server/public/css/main_pan.css
+++ b/src/server/public/css/main_pan.css
@@ -1,3 +1,10 @@
+html, body {
+  overflow-x: hidden;
+}
+body {
+  position: relative
+}
+
 /* CSS Document */
 @charset "utf-8";
 /* CSS Document */
