--- a/src/server/views/ZiWeiPan.ejs
+++ b/src/server/views/ZiWeiPan.ejs
@@ -50,8 +50,9 @@
 <% } %>
             				
             			</div>
-            			<div id="ljms2_DIV_11">
-            			</div>
+                        <form class='invisible-form' method='POST' action='/ZiWeiPan'>
+                            
+                        </form>
             		</div>
             	<!-- STARTOF lp_content -->
 
