trying to fix mobile display problem

--- a/src/server/public/css/main_pan.css
+++ b/src/server/public/css/main_pan.css
@@ -5,6 +5,10 @@ body {
   position: relative
 }
 
+#ljms2_DIV_5 img {
+	margin-left: 15px;
+}
+
 /* CSS Document */
 @charset "utf-8";
 /* CSS Document */
