trying to fix mobile display problem

--- a/src/server/views/ZiWeiPan.ejs
+++ b/src/server/views/ZiWeiPan.ejs
@@ -42,11 +42,11 @@
             		<div id="ljms2_DIV_2">
             			<div id="ljms2_DIV_5" style="margin: 0px 0px 20px 10px;">
 <% if (data.inputs.mode == 1) { %>
-    <label>当前排盘：</label><img src="/img/lifepan.png" /><br><label>切换到：</label><img src="/img/daxianpan.png" style='cursor: pointer;' onclick='goToPan(2)'/><img src="/img/yearpan.png" style='cursor: pointer;' onclick='goToPan(3)'  />
+    <label>当前排盘：</label><img src="/img/lifepan.png" /><br /><label>切换到：</label><img src="/img/daxianpan.png" style='cursor: pointer;' onclick='goToPan(2)'/><img src="/img/yearpan.png" style='cursor: pointer;' onclick='goToPan(3)'  />
 <% } else if (data.inputs.mode == 2) { %>
-    <label>当前排盘：</label><img src="/img/daxianpan.png" /><br><label>切换到：</label><img src="/img/lifepan.png"  style='cursor: pointer;' onclick='goToPan(1)' /><img src="/img/yearpan.png" style='cursor: pointer;' onclick='goToPan(3)'  />
+    <label>当前排盘：</label><img src="/img/daxianpan.png" /><br /><label>切换到：</label><img src="/img/lifepan.png"  style='cursor: pointer;' onclick='goToPan(1)' /><img src="/img/yearpan.png" style='cursor: pointer;' onclick='goToPan(3)'  />
 <% } else if (data.inputs.mode == 3) { %>
-    <label>当前排盘：</label><img src="/img/yearpan.png"/><br><label>切换到：</label><img src="/img/lifepan.png" style='cursor: pointer;' onclick='goToPan(1)'  /><img src="/img/daxianpan.png" style='cursor: pointer;' onclick='goToPan(2)' />
+    <label>当前排盘：</label><img src="/img/yearpan.png"/><br /><label>切换到：</label><img src="/img/lifepan.png" style='cursor: pointer;' onclick='goToPan(1)'  /><img src="/img/daxianpan.png" style='cursor: pointer;' onclick='goToPan(2)' />
 <% } %>
             				
             			</div>
