trying to fix mobile display problem

--- a/src/server/public/css/main.css
+++ b/src/server/public/css/main.css
@@ -4,10 +4,10 @@
    Author's custom styles
    ========================================================================== */
 
-
+/*
 html, body {
   overflow-x: hidden;
-}
+}*/
 body {
   position: relative
 }
