--- a/src/server/views/ZiWeiPan.ejs
+++ b/src/server/views/ZiWeiPan.ejs
@@ -40,13 +40,13 @@
             <div class="container" style="margin-top: 80px;">
 
             		<div id="ljms2_DIV_2">
-            			<div id="ljms2_DIV_5" style="margin: 0px 0px 20px 10px;">
+            			<div id="ljms2_DIV_5" style="margin: 0px 0px 10px 10px;">
 <% if (data.inputs.mode == 1) { %>
-    <label>当前排盘：</label><img src="/img/lifepan.png" /><br /><label>切换到：</label><img src="/img/daxianpan.png" style='cursor: pointer;' onclick='goToPan(2)'/><img src="/img/yearpan.png" style='cursor: pointer;' onclick='goToPan(3)'  />
+    <label>当前排盘：</label><img src="/img/lifepan.png" /><br /><label>切换到：&nbsp;&nbsp;&nbsp;&nbsp;</label><img src="/img/daxianpan.png" style='cursor: pointer;' onclick='goToPan(2)'/><img src="/img/yearpan.png" style='cursor: pointer;' onclick='goToPan(3)'  />
 <% } else if (data.inputs.mode == 2) { %>
-    <label>当前排盘：</label><img src="/img/daxianpan.png" /><br /><label>切换到：</label><img src="/img/lifepan.png"  style='cursor: pointer;' onclick='goToPan(1)' /><img src="/img/yearpan.png" style='cursor: pointer;' onclick='goToPan(3)'  />
+    <label>当前排盘：</label><img src="/img/daxianpan.png" /><br /><label>切换到：&nbsp;&nbsp;&nbsp;&nbsp;</label><img src="/img/lifepan.png"  style='cursor: pointer;' onclick='goToPan(1)' /><img src="/img/yearpan.png" style='cursor: pointer;' onclick='goToPan(3)'  />
 <% } else if (data.inputs.mode == 3) { %>
-    <label>当前排盘：</label><img src="/img/yearpan.png"/><br /><label>切换到：</label><img src="/img/lifepan.png" style='cursor: pointer;' onclick='goToPan(1)'  /><img src="/img/daxianpan.png" style='cursor: pointer;' onclick='goToPan(2)' />
+    <label>当前排盘：</label><img src="/img/yearpan.png"/><br /><label>切换到：&nbsp;&nbsp;&nbsp;&nbsp;</label><img src="/img/lifepan.png" style='cursor: pointer;' onclick='goToPan(1)'  /><img src="/img/daxianpan.png" style='cursor: pointer;' onclick='goToPan(2)' />
 <% } %>
             				
             			</div>
