change p to div

--- a/src/server/views/ZiWeiPan.ejs
+++ b/src/server/views/ZiWeiPan.ejs
@@ -601,8 +601,8 @@
                 
             </div>
             <div style='display: none'>
-                <p class="list-group-item list-group-item-danger sample-main">Cras sit amet nibh libero</p>
-                <p class="list-group-item list-group-item-info sample-minor">Cras sit amet nibh libero</p>
+                <div class="list-group-item list-group-item-danger sample-main" style="font-size: 14px;">Cras sit amet nibh libero</div>
+                <div class="list-group-item list-group-item-info sample-minor" style="font-size: 14px;">Cras sit amet nibh libero</div>
             </div>
             </div>
             <script src="js/vendor/jquery-1.11.2.min.js"></script>
