yearpan beautify. change text

--- a/src/server/views/ZiWeiPan.ejs
+++ b/src/server/views/ZiWeiPan.ejs
@@ -32,7 +32,7 @@
             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
               <div class="container">
                 <div class="navbar-header">
-                  <a class="navbar-brand" href="/">紫薇命盘</a>
+                  <a class="navbar-brand" href="/">缘中秀在线排盘系统</a>
                 </div>
               </div>
             </nav>
