--- a/src/server/views/ZiWeiPan.ejs
+++ b/src/server/views/ZiWeiPan.ejs
@@ -308,6 +308,9 @@
                             </li>
                             <li>子斗在:<span style="color:rgb(253, 3, 3);"><%= data.centerGong.子斗在 %></span>&nbsp;&nbsp;身宫在:<span style="color:rgb(253, 3, 3);"><%= data.centerGong.身宫在 %></span>&nbsp;&nbsp;命宫在:<span style="color:rgb(253, 3, 3);"><%= data.centerGong.命宫在 %></span>
                             </li>
+                            <li id='scbz'>
+                                
+                            </li>
                         </div>
                         <div id="StarContent" class="StarContent" ></div>
                     </div>
