--- a/src/server/views/ZiWeiPan.ejs
+++ b/src/server/views/ZiWeiPan.ejs
@@ -95,7 +95,7 @@
                         <div class="lp_dzhi"><%= data.twelveGongs[0].yearInLunar %></div>
                         <div class="lp_tlife"><%= data.twelveGongs[0].stage %></div>
                         <div class="lp_cgong"><%= data.twelveGongs[0].ageRange %>
-                            <br><span class="gst"><%= data.twelveGongs[0].gongName %></span>
+                            <br><span class="gst"><%= data.twelveGongs[0].gongName %><% if (data.twelveGongs[0].hasOwnProperty('star') || data.twelveGongs[0].hasOwnProperty('diamond')) { %><%- '★' %><% } %></span>
                         </div>
                     </div>
                 </td>
@@ -132,7 +132,7 @@
                         <div class="lp_dzhi"><%= data.twelveGongs[1].yearInLunar %></div>
                         <div class="lp_tlife"><%= data.twelveGongs[1].stage %></div>
                         <div class="lp_cgong"><%= data.twelveGongs[1].ageRange %>
-                            <br><span class="gst"><%= data.twelveGongs[1].gongName %></span>
+                            <br><span class="gst"><%= data.twelveGongs[1].gongName %><% if (data.twelveGongs[1].hasOwnProperty('star') || data.twelveGongs[1].hasOwnProperty('diamond')) { %><%- '★' %><% } %></span>
                         </div>
                     </div>
                 </td>
@@ -169,7 +169,7 @@
                         <div class="lp_dzhi"><%= data.twelveGongs[2].yearInLunar %></div>
                         <div class="lp_tlife"><%= data.twelveGongs[2].stage %></div>
                         <div class="lp_cgong"><%= data.twelveGongs[2].ageRange %>
-                            <br><span class="gst"><%= data.twelveGongs[2].gongName %></span>
+                            <br><span class="gst"><%= data.twelveGongs[2].gongName %><% if (data.twelveGongs[2].hasOwnProperty('star') || data.twelveGongs[2].hasOwnProperty('diamond')) { %><%- '★' %><% } %></span>
                         </div>
                     </div>
                 </td>
@@ -206,7 +206,7 @@
                         <div class="lp_dzhi"><%= data.twelveGongs[3].yearInLunar %></div>
                         <div class="lp_tlife"><%= data.twelveGongs[3].stage %></div>
                         <div class="lp_cgong"><%= data.twelveGongs[3].ageRange %>
-                            <br><span class="gst"><%= data.twelveGongs[3].gongName %></span>
+                            <br><span class="gst"><%= data.twelveGongs[3].gongName %><% if (data.twelveGongs[3].hasOwnProperty('star') || data.twelveGongs[3].hasOwnProperty('diamond')) { %><%- '★' %><% } %></span>
                         </div>
                     </div>
                 </td>
@@ -245,7 +245,7 @@
                         <div class="lp_dzhi"><%= data.twelveGongs[4].yearInLunar %></div>
                         <div class="lp_tlife"><%= data.twelveGongs[4].stage %></div>
                         <div class="lp_cgong"><%= data.twelveGongs[4].ageRange %>
-                            <br><span class="gst"><%= data.twelveGongs[4].gongName %></span>
+                            <br><span class="gst"><%= data.twelveGongs[4].gongName %><% if (data.twelveGongs[4].hasOwnProperty('star') || data.twelveGongs[4].hasOwnProperty('diamond')) { %><%- '★' %><% } %></span>
                         </div>
                     </div>
                 </td>
@@ -348,7 +348,7 @@
                         <div class="lp_dzhi"><%= data.twelveGongs[5].yearInLunar %></div>
                         <div class="lp_tlife"><%= data.twelveGongs[5].stage %></div>
                         <div class="lp_cgong"><%= data.twelveGongs[5].ageRange %>
-                            <br><span class="gst"><%= data.twelveGongs[5].gongName %></span>
+                            <br><span class="gst"><%= data.twelveGongs[5].gongName %><% if (data.twelveGongs[5].hasOwnProperty('star') || data.twelveGongs[5].hasOwnProperty('diamond')) { %><%- '★' %><% } %></span>
                         </div>
                     </div>
                 </td>
