--- a/src/server/views/ZiWeiPan.ejs
+++ b/src/server/views/ZiWeiPan.ejs
@@ -387,7 +387,7 @@
                         <div class="lp_dzhi"><%= data.twelveGongs[6].yearInLunar %></div>
                         <div class="lp_tlife"><%= data.twelveGongs[6].stage %></div>
                         <div class="lp_cgong"><%= data.twelveGongs[6].ageRange %>
-                            <br><span class="gst"><%= data.twelveGongs[6].gongName %></span>
+                            <br><span class="gst"><%= data.twelveGongs[6].gongName %><% if (data.twelveGongs[6].hasOwnProperty('star') || data.twelveGongs[6].hasOwnProperty('diamond')) { %><%- '★' %><% } %></span>
                         </div>
                     </div>
                 </td>
@@ -424,7 +424,7 @@
                         <div class="lp_dzhi"><%= data.twelveGongs[7].yearInLunar %></div>
                         <div class="lp_tlife"><%= data.twelveGongs[7].stage %></div>
                         <div class="lp_cgong"><%= data.twelveGongs[7].ageRange %>
-                            <br><span class="gst"><%= data.twelveGongs[7].gongName %></span>
+                            <br><span class="gst"><%= data.twelveGongs[7].gongName %><% if (data.twelveGongs[7].hasOwnProperty('star') || data.twelveGongs[7].hasOwnProperty('diamond')) { %><%- '★' %><% } %></span>
                         </div>
                     </div>
                 </td>
@@ -463,7 +463,7 @@
                         <div class="lp_dzhi"><%= data.twelveGongs[8].yearInLunar %></div>
                         <div class="lp_tlife"><%= data.twelveGongs[8].stage %></div>
                         <div class="lp_cgong"><%= data.twelveGongs[8].ageRange %>
-                            <br><span class="gst"><%= data.twelveGongs[8].gongName %></span>
+                            <br><span class="gst"><%= data.twelveGongs[8].gongName %><% if (data.twelveGongs[8].hasOwnProperty('star') || data.twelveGongs[8].hasOwnProperty('diamond')) { %><%- '★' %><% } %></span>
                         </div>
                     </div>
                 </td>
@@ -500,7 +500,7 @@
                         <div class="lp_dzhi"><%= data.twelveGongs[9].yearInLunar %></div>
                         <div class="lp_tlife"><%= data.twelveGongs[9].stage %></div>
                         <div class="lp_cgong"><%= data.twelveGongs[9].ageRange %>
-                            <br><span class="gst"><%= data.twelveGongs[9].gongName %></span>
+                            <br><span class="gst"><%= data.twelveGongs[9].gongName %><% if (data.twelveGongs[9].hasOwnProperty('star') || data.twelveGongs[9].hasOwnProperty('diamond')) { %><%- '★' %><% } %></span>
                         </div>
                     </div>
                 </td>
@@ -537,7 +537,7 @@
                         <div class="lp_dzhi"><%= data.twelveGongs[10].yearInLunar %></div>
                         <div class="lp_tlife"><%= data.twelveGongs[10].stage %></div>
                         <div class="lp_cgong"><%= data.twelveGongs[10].ageRange %>
-                            <br><span class="gst"><%= data.twelveGongs[10].gongName %></span>
+                            <br><span class="gst"><%= data.twelveGongs[10].gongName %><% if (data.twelveGongs[10].hasOwnProperty('star') || data.twelveGongs[10].hasOwnProperty('diamond')) { %><%- '★' %><% } %></span>
                         </div>
                     </div>
                 </td>
@@ -574,7 +574,7 @@
                         <div class="lp_dzhi"><%= data.twelveGongs[11].yearInLunar %></div>
                         <div class="lp_tlife"><%= data.twelveGongs[11].stage %></div>
                         <div class="lp_cgong"><%= data.twelveGongs[11].ageRange %>
-                            <br><span class="gst"><%= data.twelveGongs[11].gongName %></span>
+                            <br><span class="gst"><%= data.twelveGongs[11].gongName %><% if (data.twelveGongs[11].hasOwnProperty('star') || data.twelveGongs[11].hasOwnProperty('diamond')) { %><%- '★' %><% } %></span>
                         </div>
                     </div>
                 </td>
