--- a/src/server/views/jiexi.ejs
+++ b/src/server/views/jiexi.ejs
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>缘中秀在线排盘系统</title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="initial-scale=1.0,width=device-width,height=device-height,target-densitydpi=device-dpi,user-scalable=yes" />
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="stylesheet" href="css/jquery-ui.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -36,6 +36,7 @@
 
     .sub-edit-div .sub-edit-input {
       margin-left: 15px;
+      width: 300px;
     }
   </style>
   <link rel="stylesheet" href="css/bootstrap-theme.min.css">
