--- a/src/server/public/css/main.css
+++ b/src/server/public/css/main.css
@@ -36,6 +36,7 @@ body {
     font-family: 'Times New Roman';
     height: 356px;
     width: 354px;
+    /*width: 100%;*/
     perspective-origin: 177px 178px;
     -webkit-perspective-origin: 177px 178px;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
