--- a/src/server/views/ZiWeiPan.ejs
+++ b/src/server/views/ZiWeiPan.ejs
@@ -37,7 +37,7 @@
               </div>
             </nav>
             
-            <div class="container" style="margin-top: 80px;">
+            <div class="container" style="margin-top: 80px;padding-left:5px;padding-right:5px;">
 
             		<div id="ljms2_DIV_2">
             			<div id="ljms2_DIV_5" style="margin: 10px auto; width: 590px;">
@@ -59,7 +59,7 @@
             	<!-- STARTOF lp_content -->
 
 <div class="lp_content" style="margin: 10px auto;">
-    <table class="lp_tab" id="mainContent">
+    <table class="lp_tab" id="mainContent" style="margin:0px;">
         <tbody>
             <tr class="lp_ztr" valign="top">
                 <td class="lp_ztd" align="right" onclick="setCentDom(this, 0)">
