--- a/src/server/views/ZiWeiPan.ejs
+++ b/src/server/views/ZiWeiPan.ejs
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>缘中秀在线排盘系统</title>
   <meta name="description" content="">
-  <meta name="viewport" content="initial-scale=0.8,width=device-width,height=device-height,target-densitydpi=device-dpi,user-scalable=yes" />
+  <meta name="viewport" content="initial-scale=1,width=600px,height=device-height,target-densitydpi=device-dpi,user-scalable=yes" />
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="stylesheet" href="css/jquery-ui.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
