--- a/src/server/views/ZiWeiPan.ejs
+++ b/src/server/views/ZiWeiPan.ejs
@@ -37,7 +37,7 @@
               </div>
             </nav>
             
-            <div class="container" style="margin-top: 80px;margin-left:5px;margin-right:5px;">
+            <div class="container" style="margin-top: 80px;padding-left: 0px; padding-right: 0px;margin-left:5px;margin-right:5px;">
 
             		<div id="ljms2_DIV_2">
             			<div id="ljms2_DIV_5" style="margin: 10px auto; width: 590px;">
