--- a/src/server/views/ZiWeiPan.ejs
+++ b/src/server/views/ZiWeiPan.ejs
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>缘中秀在线排盘系统</title>
   <meta name="description" content="">
-  <meta name="viewport" content="initial-scale=1,width=600px,height=device-height,target-densitydpi=device-dpi,user-scalable=yes" />
+  <meta name="viewport" content="initial-scale=1,width=640px,height=device-height,target-densitydpi=device-dpi,user-scalable=yes" />
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="stylesheet" href="css/jquery-ui.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -36,8 +36,8 @@
                 </div>
               </div>
             </nav>
-            
-            <div class="container" style="margin-top: 80px;padding-left: 0px; padding-right: 0px;margin-left:5px;margin-right:5px;">
+            <div style='margin-left: 8px; margin-right: 8px;padding-right: 8px; padding-left: 8px;'>
+            <div class="container" style="margin-top: 80px;padding-left: 0px; padding-right: 0px;margin-left:auto;margin-right:auto;">
 
             		<div id="ljms2_DIV_2">
             			<div id="ljms2_DIV_5" style="margin: 10px auto; width: 590px;">
@@ -598,14 +598,15 @@
             	<!-- ENDOF lp_content -->
 			
 			</div>
-            <div class='container'>
-            <div class='explanation-div list-group' style='margin: 30px auto;width: 600px;'>
+            <div class='container' style="padding-right: 0px; padding-left: 0px;">
+            <div class='explanation-div list-group' style='margin: 30px auto;width: 610px;'>
                 <h3 class="list-group-item list-group-item-info">命盘解析</h3>
                 
             </div>
             <div style='display: none'>
                 <div class="list-group-item list-group-item-danger sample-main" style="font-size: 14px;">Cras sit amet nibh libero</div>
                 <div class="list-group-item list-group-item-info sample-minor" style="font-size: 14px;">Cras sit amet nibh libero</div>
+            </div>
             </div>
             </div>
             <script src="js/vendor/jquery-1.11.2.min.js"></script>
